# SpexronDPI

./: .gitignore  CMakeLists.txt  README.md
installer/: SpexronDPI_Setup.iss
src/: main.cpp
src/capture/: CaptureWorker.cpp  CaptureWorker.hpp  WinDivertAdapter.cpp  WinDivertAdapter.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/core/: PacketContext.hpp
src/engine/: HostManager.cpp  HostManager.hpp  PacketModifier.cpp  PacketModifier.hpp  PacketProcessor.cpp  PacketProcessor.hpp
src/gui/: Dashboard.cpp  Dashboard.hpp
src/parsers/: L7Parser.cpp  L7Parser.hpp  NetworkParser.cpp  NetworkParser.hpp  PacketHeaders.hpp
src/rules/: RuleEngine.cpp  RuleEngine.hpp
src/telemetry/: Logger.cpp  Logger.hpp  Statistics.cpp  Statistics.hpp
src/utils/: Checksum.cpp  Checksum.hpp
